# Learning-Management-System-LMS-

./: Admin.cpp  Admin.h  AdminDashboard.cpp  AdminDashboard.h  Assignment.cpp  Assignment.h  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Course.cpp  Course.h  Document.cpp  Document.h  Grade.cpp  Grade.h  LMSDatabase.cpp  LMSDatabase.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  OnlineCourse.cpp  OnlineCourse.h  OnsiteCourse.cpp  OnsiteCourse.h  README.md  StudentDashboard.cpp  StudentDashboard.h  StyleHelper.h  Submission.cpp  Submission.h  TeacherDashboard.cpp  TeacherDashboard.h  User.cpp  User.h  Video.cpp  (+12 more)
